--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 
 # dependencies
 /node_modules
@@ -10,6 +10,7 @@
 
 # production
 /build
+/public
 
 # misc
 .DS_Store
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.prettierrc
 
 npm-debug.log*
 yarn-debug.log*
