--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dotenv": "^0.1.3",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
